# COSEC

./: .bochsrc  .bochsrc-template  .editorconfig  .gitignore  BUILD.bazel  INSTALL  INSTALL.md  LICENSE  MODULE.bazel  Makefile  README  README.md  TODO  alloc_ff.c  boot.S  console.c  fs.c  gdt.c  idt.c  index.html  initfs.c  intr.S  intrs.S  intrs.c  kbd.c  kconsole.c  kmain.c  kshell.c  link.ld  mboot.c  memory.c  mm_firstfit.c  paging.c  params.json  physmem.c  screen.c  setup.c  sluice.S  stdio.c  stdlib.c  (+6 more)
arch/: arch.S  boot.S  gdt.c  i386.c  idt.c  intr.S  mboot.c
bazel/: BUILD  toolchain_config.bzl
core/: alloc_ff.c  elf.c  firstfit.c  init.c  kheap.c  kshell.c  paging.c  pmem.c  repl.secd  secd.c  setup.c  syscall.c  tasks.c  test.c  time.c  vfs.c
dev/: devices.c  devtable.c  floppy.c  ide.c  idt.c  intrs.c  kbd.c  memdev.c  memdevs.c  pci.c  rtc.c  screen.c  serial.c  timer.c
fs/: devfs.c  elf.c  fs.c  fs_sys.c  fs_syscalls.c  inode.c  ramfs.c  vfs.c
include/: asm.h  attrs.h  conf.h  console.h  defs.h  elf.h  gdt.h  globl.h  idt.h  intr.h  intrs.h  kbd.h  kshell.h  libc.h  lisp.h  log.h  mboot.h  memory.h  misc.h  mm_firstfit.h  network.h  paging.h  physmem.h  pmem.h  process.h  screen.h  stdio.h  syscall.h  syscalls.h  tasks.h  timer.h  vfs.h
lib/: lua.mk  rosec.mk  secd.mk
lib/rosec/: Cargo.toml  Makefile  i686-cosec.json  rust-toolchain
lib/rosec/.cargo/: config.toml
lib/rosec/src/: lib.rs
mem/: firstfit.c  kheap.c  paging.c  pmem.c  virtmem.c
mm/: gdt.c  paging.c  pmem.c
res/: .bochsrc-template  backup.sh  bochs-menu.lst  boot.files  (+9 more)
(+183 files in other folders)
