[package]
name = "rosec"
version = "0.1.0"
authors = ["Dmytro S <me@dmytrish.net>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
abort = "panic"

[profile.release]
abort = "panic"

[features]

[dependencies]

[dependencies.compiler_builtins]
#features = ["weak"]

[package.metadata.cargo-xbuild]
#memcpy = false
